<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<!-- POM file generated with GWT webAppCreator -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.brice.lili</groupId>
	<artifactId>LiliShowcase</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>GWT Maven Archetype</name>

	<properties>
		<!-- Convenience property to set the GWT version -->
		<gwtVersion>2.4.0</gwtVersion>
		<gwtp.version>0.7</gwtp.version>
		<!-- GWT needs at least java 1.5 -->
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<gwt.extraJvmArgs>-Xmx1024m -XX:MaxPermSize=1024m</gwt.extraJvmArgs>
		<gwt.compiler.localWorkers>6</gwt.compiler.localWorkers>
	</properties>

	<repositories>
		<repository>
			<id>support-gpl-release</id>
			<name>Sencha Support GPL Repository</name>
			<url>https://maven.sencha.com/repo/support-gpl-release/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwtVersion}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwtVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>gxt</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.0.0.GA</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.0.0.GA</version>
			<classifier>sources</classifier>
			<!-- <scope>test</scope> -->
		</dependency>
		<!-- GWTP dependencies -->
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-mvp-client</artifactId>
			<version>${gwtp.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-dispatch-client</artifactId>
			<version>${gwtp.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-dispatch-server-guice</artifactId>
			<version>${gwtp.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-crawler</artifactId>
			<version>${gwtp.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-processors</artifactId>
			<version>${gwtp.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-tester</artifactId>
			<version>${gwtp.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt.inject</groupId>
			<artifactId>gin</artifactId>
			<version>1.5.0</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.gwt</groupId>
					<artifactId>gwt-servlet</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>3.0</version>
		</dependency>
		<!-- END GWTP dependencies -->
		<!-- <dependency> <groupId>org.apache</groupId> <artifactId>xmlrpc-client</artifactId> 
			<version>3.1.3c</version> </dependency> <dependency> <groupId>org.apache</groupId> 
			<artifactId>xmlrpc-common</artifactId> <version>3.1.3c</version> </dependency> 
			<dependency> <groupId>org.apache</groupId> <artifactId>xmlrpc-server</artifactId> 
			<version>3.1.3c</version> </dependency> -->
		<!-- <dependency> <groupId>gwt-utils</groupId> <artifactId>gwt-utils</artifactId> 
			<version>22032012</version> <classifier>gwt2.4.0</classifier> </dependency> -->

		<!-- <dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>uibinder-bridge</artifactId>
			<version>2.5.0</version>
		</dependency> -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.6</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.6</version>
		</dependency>
		<dependency>
			<groupId>com.allen-sauer.gwt.log</groupId>
			<artifactId>gwt-log</artifactId>
			<version>3.1.6</version>
		</dependency>
		<!-- Dependency for the slideshow -->
		<dependency>
            <groupId>org.gwt</groupId>
            <artifactId>contentflow4gwt</artifactId>
            <version>0.1</version>
            <scope>compile</scope>
        </dependency>
	</dependencies>

	<build>
		<!-- Generate compiled stuff in the folder used for developing mode -->
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

		<plugins>

			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.4.0</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<!-- <goal>test</goal> -->
							<goal>i18n</goal>
							<goal>generateAsync</goal>
						</goals>
					</execution>
				</executions>
				<!-- Plugin configuration. There are many available options, see gwt-maven-plugin 
					documentation at codehaus.org -->
				<configuration>
					<runTarget>index.html</runTarget>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
					<i18nMessagesBundle>com.brice.lili.showcase.client.lang.Translate</i18nMessagesBundle>
					<!-- <noServer>false</noServer> -->
					<debugPort>5050</debugPort>
					<!-- <port>4040</port> -->
					<bindAddress>0.0.0.0</bindAddress>
					<!-- <bindAddress>192.168.1.11</bindAddress> -->
				</configuration>
			</plugin>

			<!-- Copy static web files before executing gwt:run -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>exploded</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<webappDirectory>${webappDirectory}</webappDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-war-plugin
										</artifactId>
										<versionRange>
											[2.1.1,)
										</versionRange>
										<goals>
											<goal>exploded</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											gwt-maven-plugin
										</artifactId>
										<versionRange>
											[2.4.0,)
										</versionRange>
										<goals>
											<goal>generateAsync</goal>
											<goal>i18n</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
